use dend instead of end because it's reserved

--- a/src/cv.html
+++ b/src/cv.html
@@ -41,7 +41,7 @@
         <hgroup>
           <h2><%=html experience.title%></h2>
           <span class="date">
-            <%=experience.start%>&mdash;<%=experience.end%>
+            <%=experience.dstart%>&mdash;<%=experience.dend%>
           </span>
         </hgroup>
         <ul>
