add explanatory footer to HTML.

--- a/src/cv.html
+++ b/src/cv.html
@@ -120,5 +120,10 @@
       </section>
 
     </article>
+		<footer>
+			Generated. For more information see <a
+			href="https://github.com/eddsteel/cv" title="Github Repository">the
+			github repository</a>.
+		</footer>
   </body>
 </html>
