link to /about and PDF

--- a/src/cv.html
+++ b/src/cv.html
@@ -8,7 +8,7 @@
   <body>
     <section class="header">
       <div class="name">
-        <%=name%>
+				<a href="http://edd.heroku.com/about"><%=name%></a>
       </div>
       <div class="url">
         <%=html url%>
@@ -123,7 +123,8 @@
 		<footer>
 			Generated. For more information see <a
 			href="https://github.com/eddsteel/cv" title="Github Repository">the
-			github repository</a>.
+			github repository</a>. <a href="https://edd.heroku.com/resume.pdf">PDF
+			version available</a>.
 		</footer>
   </body>
 </html>
