add qr image to bottom

--- a/src/cv.html
+++ b/src/cv.html
@@ -119,6 +119,9 @@
         </ul>
       </section>
 
+			<footer>
+				<a href="http://edd.heroku.com/qr"><img src="<%=footerimg%>"/></a>
+			</footer>
     </article>
 		<footer>
 			Generated. For more information see <a
