--- a/src/cv.html
+++ b/src/cv.html
@@ -126,7 +126,7 @@
 		<footer>
 			Generated. For more information see <a
 			href="https://github.com/eddsteel/cv" title="Github Repository">the
-			github repository</a>. <a href="https://edd.heroku.com/resume.pdf">PDF
+			github repository</a>. <a href="http://edd.heroku.com/resume.pdf">PDF
 			version available</a>.
 		</footer>
   </body>
